<resources>
    <string name="app_name">DroidHub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="images">Images</string>
    <string name="documents">Documents</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="file_manager">File Manager</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="log">Log</string>
    <string name="in">In</string>
    <string name="login">Login</string>
    <string name="don_t_hava_an_account_sign_up">Don\'t have an Account? Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reset">Reset</string>
    <string name="password_two">Password</string>
    <string name="email_forgot">Email</string>
    <string name="done">Done</string>
    <string name="go_back_to_login">Go back to Login</string>
    <string name="name_hint">Name</string>
    <string name="have_an_account_log_in">Have an Account? Log In</string>
    <string name="sign">Sign</string>
    <string name="up">Up</string>
    <string name="signup">SignUp</string>
    <string name="email_sign_up">Email</string>
    <string name="password_sign_up">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dashboard">DashBoard</string>
    <string name="profile">Profile</string>
    <string name="upload">Upload</string>
    <string name="my_files">My Files</string>
    <string name="download">Download</string>
    <string name="files">Files</string>
    <string name="uploads">Uploads</string>
    <string name="downloads">Downloads</string>
    <string name="email_profile">Email</string>
    <string name="name_profile">Name</string>
    <string name="analytics">Analytics</string>
    <string name="choose_file">Choose file</string>
    <string name="upload_file">Upload File</string>
    <string name="filename">Filename</string>
    <string name="file_uploaded_successfully">File uploaded successfully</string>
    <string name="uploading">Uploading...</string>
    <string name="ok">Ok</string>
    <string name="network_not_available">Network not available</string>
    <string name="a_reset_link_has_been_sent_to_your_email">A reset link has been sent to your email</string>
    <string name="enter_display_name">Enter Display Name</string>
    <string name="cancel">Cancel</string>
    <string name="goto_login">Goto Login</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="email_verification">Email Verification has been sent your mail</string>
    <string name="email_not_verified">Your email has not been verified.\n Check your mail to verify your email</string>
</resources>