<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/button_alert_shape">

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_set_name" />

    <EditText
        android:id="@+id/edit_set_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/enter_display_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/roboto"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/droidHub_primary"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_ok"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintStart_toStartOf="@+id/edit_set_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_set_name"
        app:strokeColor="@color/droidHub_primary" />

</androidx.constraintlayout.widget.ConstraintLayout>